<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RadioGroup
        android:id="@+id/gruporb"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:text="@string/Opcion_1" />
        
        <RadioButton 
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content" 
            android:text="@string/Opcion_2"/>
        
    </RadioGroup>
    
    <TextView
	    android:id="@+id/radioOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioSelect" 
        />
    

</LinearLayout>
